syntax = "proto3";

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

option go_package = "github.com/atframework/atsf4g-go/component-protocol-public/config/protocol/config";

import "protocol/extension/xrescode_extensions_v3.proto";
import "protocol/extension/v3/xresloader.proto";

package proy.config;

enum EnRandomPoolType {
  EN_RANDOM_POOL_TYPE_INVALID = 0;
  EN_RANDOM_POOL_TYPE_ALL = 1 [(org.xresloader.enum_alias) = "全部选中"];
  EN_RANDOM_POOL_TYPE_INDEPENDENT = 2 [(org.xresloader.enum_alias) = "独立事件:多个可重复"];
  EN_RANDOM_POOL_TYPE_EXCLUSIVE = 3 [(org.xresloader.enum_alias) = "互斥事件:多个不重复"];
  EN_RANDOM_POOL_TYPE_CUSTOM = 4 [(org.xresloader.enum_alias) = "用户自选"];
}

message DRandomPoolElementCount {
  int64 min_count = 1;
  int64 max_count = 2;
}

message DRandomPoolElement {
  int32 type_id = 1 [(org.xresloader.validator) = "ExcelRandomPool_element_type_id"];
  DRandomPoolElementCount count = 2;
  int32 weight = 3 [(org.xresloader.validator) = ">0", (org.xresloader.field_tag) = "server_only"];
}

///////////////// 以下接口不应该直接使用 //////////////////////

message ExcelRandomPool {
  option (xrescode.loader) = {
    file_path: "random_pool.bytes"
    indexes: { fields: "pool_id" index_type: EN_INDEX_KL }

    tags: "client"
    tags: "server"
  };

  int32 pool_id = 1 [(org.xresloader.validator) = "ExcelItemIdRange_RandomPool"];
  EnRandomPoolType random_type = 2;
  int32 times = 3 [(org.xresloader.validator) = ">0"];
  repeated DRandomPoolElement elements = 4;
}
